--- a/templates/edit_report.html
+++ b/templates/edit_report.html
@@ -14,7 +14,7 @@
 <div class="container-fluid d-flex justify-content-center">
     <div class="row w-75 bg-light rounded p-3 mb-3">
 
-        <form method="POST" action="" enctype="multipart/form-data">
+        <form method="POST" action="" enctype="multipart/form-data" id="edit-report-form">
             {% csrf_token %}
             <div class="col-md-12">
 
@@ -59,12 +59,12 @@
                                 {% for image in images %}
                                 <div class="col-4">
                                     <img class="report-img" src="{{ image.image_file.url }}" alt="Image" height="100">
+                                    <!-- Delete Image -->
                                     <p class="text-secondary d-inline">Delete</p>
-                                    <input type="checkbox" name="delete_image_{{ image.id }}">
+                                    <input type="checkbox" name="delete_image_{{ image.id }}" data-marked-for-deletion>
                                 </div>
                                 {% endfor %}
                             </div>
-
                             <!-- add image -->
                             <div class="col-12 mt-2">
                                 <label for="upload"><i class="fa-solid fa-camera"></i> Upload More Images:</label>
@@ -74,15 +74,66 @@
                         <div class="col-6">
                             {{ edit_form.gps_map_link|as_crispy_field }}
                         </div>
+                        <!-- Modal -->
+                        <div class="modal" id="confirmationModal" tabindex="-1" aria-labelledby="confirmationModalLabel"
+                            aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="confirmationModalLabel">Confirm Deletion</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        Are you sure you want to delete the selected images? This action cannot be
+                                        undone.
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary"
+                                            data-bs-dismiss="modal">Cancel</button>
+                                        <button type="button" class="btn btn-danger"
+                                            onclick="submitForm()">Confirm</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Submit -->
                         <div class="col-12 d-flex flex-row justify-content-center">
-                            <input class="btn btn-success" type="submit" value="Update Report">
+                            <button type="button" class="btn btn-success" onclick="showConfirmationModal()">
+                                Update Report
+                            </button>
                         </div>
                     </div>
                 </div>
+                <input type="hidden" name="confirm-deletion" id="confirm-deletion" value="false">
             </div>
         </form>
 
     </div>
 </div>
 
+<script>
+
+    function showConfirmationModal() {
+        const imagesToDelete = document.querySelectorAll('input[data-marked-for-deletion]:checked');
+
+        if (imagesToDelete.length > 0) {
+            const modal = new bootstrap.Modal(document.getElementById('confirmationModal'));
+            modal.show();
+        } else {
+            // No images marked submit the form directly
+            document.getElementById('edit-report-form').submit();
+        }
+    }
+
+    function submitForm() {
+        // Change 'confirm-deletion' hidden input boolean
+        document.getElementById('confirm-deletion').value = 'true';
+        // Submit the form
+        document.getElementById('edit-report-form').submit();
+    }
+
+</script>
+
 {% endblock %}
+
