--- a/templates/account.html
+++ b/templates/account.html
@@ -89,11 +89,11 @@
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
-                            Are you sure you want to delete this report? This can not be undone!
+                            Are you sure you want to delete <strong>{{ report.title }}</strong> report? This can <strong>NOT</strong> be undone!
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                            <!-- The form submission will handle the delete action -->
+                            <!-- The form submission will delete -->
                             <form method="post" action="{% url 'delete' pk=report.pk %}">
                                 {% csrf_token %}
                                 <button type="submit" class="btn btn-danger">Delete</button>
