create custom template tags and relevant files to count number of comments left by user, update template accordingly

--- a/templates/account.html
+++ b/templates/account.html
@@ -32,7 +32,8 @@
 
 <!-- Account Deletion Modal -->
 
-<div class="modal fade" id="deleteAccountModal" tabindex="-1" aria-labelledby="deleteAccountModalLabel" aria-hidden="true">
+<div class="modal fade" id="deleteAccountModal" tabindex="-1" aria-labelledby="deleteAccountModalLabel"
+    aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -40,7 +41,21 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <p>Are you sure you want to delete your account? This action cannot be undone.</p>
+                <h5>Are you sure you want to delete your account?</h5>
+                <p>
+                    This action cannot be undone and will erase all reports, comments and images created by
+                    <strong>{{ user.username }}.</strong>
+                </p>
+                <h5>Deletions:</h5>
+                <p>Reports:
+                    {% with reports.count as total_reports %}
+                    {{ total_reports }}
+                    {% endwith %}
+                </p>
+                <p>Comments:
+                    {% load custom_tags %}
+                    {% count_user_comments request.user %}
+                </p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
@@ -104,14 +119,16 @@
             <div class="col-3 d-flex flex-column justify-content-center align-items-center">
                 <p>{{ report.start_date }}</p>
                 <a href="{% url 'edit_report' pk=report.pk %}" class="ud-btn text-info">Edit</a>
-                <a href="#" class="ud-btn text-danger" data-bs-toggle="modal" data-bs-target="#deleteReportModal" data-report-id="{{ report.pk }}">
+                <a href="#" class="ud-btn text-danger" data-bs-toggle="modal" data-bs-target="#deleteReportModal"
+                    data-report-id="{{ report.pk }}">
                     Delete
                 </a>
             </div>
 
             <!-- Delete Report Modal -->
 
-            <div class="modal" id="deleteReportModal" tabindex="-1" aria-labelledby="deleteReportModalLabel" aria-hidden="true">
+            <div class="modal" id="deleteReportModal" tabindex="-1" aria-labelledby="deleteReportModalLabel"
+                aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
@@ -119,7 +136,8 @@
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
-                            Are you sure you want to delete <strong>{{ report.title }}</strong> report? This can <strong>NOT</strong> be undone!
+                            Are you sure you want to delete <strong>{{ report.title }}</strong> report? This can
+                            <strong>NOT</strong> be undone!
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
