--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,8 @@
 
     <script src="https://kit.fontawesome.com/3440ecbefc.js" crossorigin="anonymous"></script>
 
+    <link rel="icon" type="image/x-icon" href="/static/favicon/favicon.ico">
+
     <title>Reach Reports</title>
 </head>
 
