--- a/templates/create_report.html
+++ b/templates/create_report.html
@@ -61,6 +61,9 @@
                         <div class="col-6">
                             {{ report_form.gps_map_link|as_crispy_field }}
                         </div>
+                        <div class="col-2">
+                            {{ report_form.status|as_crispy_field }}
+                        </div>
                         <div class="col-12 d-flex flex-row justify-content-center">
                             <input class="btn btn-success" type="submit" value="Create Report">
                         </div>
