--- a/templates/edit_report.html
+++ b/templates/edit_report.html
@@ -74,6 +74,9 @@
                         <div class="col-6">
                             {{ edit_form.gps_map_link|as_crispy_field }}
                         </div>
+                        <div class="col-2">
+                            {{ edit_form.status|as_crispy_field }}
+                        </div>
                         <!-- Modal -->
                         <div class="modal" id="confirmationModal" tabindex="-1" aria-labelledby="confirmationModalLabel"
                             aria-hidden="true">
