--- a/templates/report_details.html
+++ b/templates/report_details.html
@@ -82,16 +82,17 @@
                     </div>
                     <div class="col-6">
                         <div class="border rounded bg-light">
-                            <p class="info-label text-muted mt-1"><i class="fa-solid fa-person-hiking fs-6">-</i><i
-                                    class="fa-solid fa-person-hiking fs-6"></i> People in Group:</p>
+                            <p class="info-label text-muted mt-1">
+                                <i class="fa-solid fa-person-hiking fs-6">-</i>
+                                <i class="fa-solid fa-person-hiking fs-6"></i> People in Group:</p>
                             <p class="info-item">{{ report.number_in_group }}</p>
                         </div>
                     </div>
                     <div class="col-6">
                         <div class="border rounded bg-light">
 
-                            <p class="info-label text-muted mt-1"><i class="fa-solid fa-people-group fs-6"></i> People
-                                on Route:</p>
+                            <p class="info-label text-muted mt-1"><i class="fa-solid fa-people-group fs-6"></i>
+                                People on Route:</p>
                             <p class="info-item">{{report.number_on_route}}</p>
                         </div>
                     </div>
@@ -241,4 +242,5 @@
         {% endif %}
     </div>
 </div>
+
 {% endblock %}
