--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -5,8 +5,8 @@
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
-<div class="container-fluid d-flex justify-content-center mt-5 mb-5">
-    <div class="row">
+<div class="container-fluid d-flex justify-content-center mt-5">
+    <div class="row mb-5">
         <div class="col-md-8 offset-md-2 mb-3">
             <h1 class="text-center">{% trans "Sign Up" %}</h1>
         </div>
