--- a/templates/base.html
+++ b/templates/base.html
@@ -111,7 +111,10 @@
                 </ul>
             </div>
             <div class="d-none col-sm-4 d-sm-flex text-center justify-content-center">
-                Take care out there & always reach for more!
+                <p id="safety_message">
+                    All Reach Reports are provided with intention to simply give advice. It is down to you as a climber
+                    to make the right decisions. Be safe, respect the mountains and don't forget to Reach!
+                </p>
             </div>
             <div class="text-center col-sm-4 d-sm-flex justify-content-end mt-2 mt-sm-0">
                 <a href="reach@climbing_reports.com" target="_blank">
